--- a/OsceManager/src/main/webapp/OsMaEntry.html
+++ b/OsceManager/src/main/webapp/OsMaEntry.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
+    <meta name="gwt:property" content="locale=de">
     <title>Data Browser</title>
     <script type="text/javascript" language="javascript" src="osMaEntry/osMaEntry.nocache.js"></script>
 </head>
