--- a/OsceManager/src/main/webapp/OsMaEntry.html
+++ b/OsceManager/src/main/webapp/OsMaEntry.html
@@ -14,6 +14,6 @@ display: none;
 </style>
 <body style="-webkit-text-size-adjust: none;">
 <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
-  <span id='loading' style="position: absolute; top: 200px; left: 300px; width: 50px; height: 50px; background: url('osMaEntry/loading.gif') no-repeat">&nbsp;</span>
+  <span id='loading' style="position: absolute; top: 200px; left: 300px; width: 50px; height: 50px; ">&nbsp;</span>
 </body>
 </html>
