- Added authentication to DMZ Sync Service - Added no-cache and title to osMaEntry.html

--- a/OsceManager/src/main/webapp/OsMaEntry.html
+++ b/OsceManager/src/main/webapp/OsMaEntry.html
@@ -4,7 +4,8 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
     <meta name="gwt:property" content="locale=de">
-    <title>Data Browser</title>
+    <meta http-equiv="cache-control" content="no-cache">
+    <title>OSCE Manager</title>
     <script type="text/javascript" language="javascript" src="osMaEntry/osMaEntry.nocache.js"></script>
 </head>
 <style>
