--- a/OsceManager/src/main/webapp/OsMaEntry.html
+++ b/OsceManager/src/main/webapp/OsMaEntry.html
@@ -7,14 +7,19 @@
     <meta http-equiv="cache-control" content="no-cache">
     <title>OSCE Manager</title>
     <script type="text/javascript" language="javascript" src="osMaEntry/osMaEntry.nocache.js"></script>
+    <link rel="shortcut icon" href="osMaEntry/favicon.ico" type="image/x-icon">
 </head>
+
 <style>
 .log-panel{
 display: none;
 }
 </style>
+
 <body style="-webkit-text-size-adjust: none;">
-<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
-  <span id='loading' style="position: absolute; top: 200px; left: 300px; width: 50px; height: 50px; ">&nbsp;</span>
+	<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
+	<div id='loading' style="position: absolute; top: 50%; left: 50%; margin-left: -64px; margin-top: -7px; width: 128px; height: 15px; padding: 0">
+		<img src="osMaEntry/loading.gif" alt="loading" />
+	</div>
 </body>
 </html>
