--- a/OsceManager/src/main/webapp/OsMaEntry.html
+++ b/OsceManager/src/main/webapp/OsMaEntry.html
@@ -4,7 +4,9 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
     <meta name="gwt:property" content="locale=de">
-    <meta http-equiv="cache-control" content="no-cache">
+    <meta content="no-cache, no-store, must-revalidate" http-equiv="cache-control">
+    <meta content="no-cache" http-equiv="Pragma">
+    <meta content="0" http-equiv="expires">
     <title>OSCE Manager</title>
     <script type="text/javascript" language="javascript" src="osMaEntry/osMaEntry.nocache.js"></script>
     <link rel="shortcut icon" href="osMaEntry/favicon.ico" type="image/x-icon">
